<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Book Title"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:text="" />

    <EditText
        android:id="@+id/editTextAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Author Name"
        android:ems="10"
        android:hint="@string/BookAuthor"
        android:inputType="textPersonName"
        android:text="" />

    <EditText
        android:id="@+id/editTextISBN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/isbn"
        android:importantForAutofill="no"
        android:inputType="number" />
</LinearLayout>